--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -18,4 +18,4 @@ jobs:
       uses: microsoft/setup-msbuild@v1.1
             
     - name: Run MSBuild
-      run: msbuild build\RetroStudio\RetroStudio.sln -property:Configuration=Release
+      run: msbuild RetroStudio\RetroStudio.sln -property:Configuration=Release
