--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -14,6 +14,13 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
+    - name: Checkout RetroCode library
+      uses: actions/checkout@v2
+      with:
+        repository: RetroTechnique/RetroCode
+        path: RetroCode
+        ref: v1.0.0.1
+
     - name: Add MSBuild to PATH
       uses: microsoft/setup-msbuild@v1.1
             
