--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -18,12 +18,11 @@ jobs:
       uses: actions/checkout@v2
       with:
         repository: RetroTechnique/RetroCode
-        path: extlibs/RetroCode
+        path: RetroStudio/extlibs/RetroCode
         ref: v1.0.0.2
 
     - name: Add MSBuild to PATH
       uses: microsoft/setup-msbuild@v1.1
             
     - name: Run MSBuild
-      working-directory: RetroStudio
-      run: msbuild RetroStudio.sln -property:Configuration=Release
+      run: msbuild RetroStudio\RetroStudio.sln -property:Configuration=Release
