--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -25,4 +25,4 @@ jobs:
       uses: microsoft/setup-msbuild@v1.1
             
     - name: Run MSBuild
-      run: msbuild RetroStudio\RetroStudio.sln -property:Configuration=Release;LibraryPath=RetroStudio/extlibs/RetroCode/lib
+      run: msbuild RetroStudio\RetroStudio.sln -property:Configuration=Release
