--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -1,10 +1,10 @@
 name: Build
 
-on:
-  push:
-    branches: [ "master" ]
+on: 
   pull_request:
-    branches: [ "master" ]
+    branches:
+      - master
+  workflow_dispatch:
 
 jobs:
   build:
@@ -13,13 +13,6 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
-
-    # - name: Checkout RetroCode library
-    #   uses: actions/checkout@v2
-    #   with:
-    #     repository: RetroTechnique/RetroCode
-    #     path: RetroStudio/extlibs/RetroCode
-    #     ref: v1.0.0.2
 
     - name: Checkout RetroCode library
       uses: robinraju/release-downloader@v1.8
@@ -34,4 +27,4 @@ jobs:
       uses: microsoft/setup-msbuild@v1.1
             
     - name: Run MSBuild
-      run: msbuild RetroStudio\RetroStudio.sln -property:Configuration=Release
+      run: msbuild RetroStudio\RetroStudio.sln -property:Configuration=Release;Platform=x64
