--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -27,4 +27,4 @@ jobs:
       uses: microsoft/setup-msbuild@v1.1
             
     - name: Run MSBuild
-      run: msbuild RetroStudio\RetroStudio.sln -property:Configuration=Release;Platform=x64
+      run: msbuild RetroStudio\RetroStudio.sln -property:Configuration=Release
